--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,18 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="referrer" content="no-referrer-when-downgrade" />
     <title>Foodify !</title>
+    <script type="text/javascript">
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) {
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
     <script defer src="https://use.fontawesome.com/releases/v6.4.0/js/all.js" crossorigin="anonymous"></script>
   </head>
   <body>
