--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="referrer" content="no-referrer-when-downgrade" />
     <title>Foodify !</title>
+    <meta name="theme-color" content="#10b58c" />
     <script type="text/javascript">
       (function(l) {
         if (l.search[1] === '/' ) {
